option('livedir', type: 'string', value: '/run/tt', description: 'Directory for state and runtime files')
option('confdir', type: 'string', value: 'sysconfdir/tt', description: 'Directory for tt configuration')
option('logdir', type: 'string', value: 'localstatedir/log/tt', description: 'Log directory for system services')

option('systemdir', type: 'string', value: 'localstatedir/lib/tt', description: 'tt system working directory')
option('servicedir', type: 'string', value: 'datadir/tt/service', description: 'System service frontend directory')

option('execline_prefix', type: 'string', value: 'bindir', description: 'Prefix for execline executables if different than bindir')

option('default_log_user', type: 'string', value: 'log', description: 'User that will write longrun logs if none is selected')

option('default_log_group', type: 'string', value: 'default_log_user', description: 'User that will write longrun logs if none is selected')

