option('livedir', type: 'string', value: '/run/tt', description: 'Directory for state and runtime files')
option('confdir', type: 'string', value: 'sysconfdir/tt', description: 'Directory for tt configuration')
option('logdir', type: 'string', value: 'localstatedir/log/tt', description: 'Log directory for system services')

option('statedir', type: 'string', value: 'localstatedir/lib/tt', description: 'tt state working directory')
option('servicedir', type: 'string', value: 'datadir/tt/services', description: 'System service frontend directory')

option('default_log_user', type: 'string', value: 'log', description: 'User that will write longrun logs if none is selected')

option('default_log_group', type: 'string', value: 'default_log_user', description: 'User that will write longrun logs if none is selected')

option('tests', type: 'feature', value: 'disabled', description: 'Build test suite')
