tt_src += files(
    'bundle.cpp',
    'bundle_options.cpp',
    'environment.cpp',
    'long_lived_script.cpp',
    'longrun.cpp',
    'longrun_options.cpp',
    'main_script.cpp',
    'oneshot.cpp',
    'oneshot_options.cpp',
    'script.cpp',
    'service.cpp',
    'service_impl.cpp',
    'service_options.cpp'
)
