# tt/action needs these files
tt_src += files (
    'service_status.cpp',
    'service_status_manager.cpp',
)

tt_cli_src += files (
    'script_supervisor.cpp',
    'supervise_longrun.cpp',
    'supervision_signal_handler.cpp',
    'spawn_long_lived_script.cpp',
    'spawn_oneshot.cpp',
    'spawn_service.cpp',
    'spawn_supervise.cpp',
    'utils.cpp',
)
