# tt/action needs these files
tt_src += files (
    'service_status.cpp',
    'service_status_manager.cpp',
)

tt_cli_src += files (
    'long_lived_script_supervisor.cpp',
    'longrun_supervisor.cpp',
    'longrun_supervisor_launcher.cpp',
    'oneshot_supervisor.cpp',
    'script_supervisor.cpp',
    'supervision_signal_handler.cpp',
    'spawn_service.cpp',
    'utils.cpp',
)
