tt_cli_src += files(
    'command.cpp',
    'disable_command.cpp',
    'edit_config_command.cpp',
    'enable_command.cpp',
    'parse_command.cpp',
    'serialize_command.cpp',
    'service_control_command.cpp',
    'show_command.cpp',
    'start_command.cpp',
    'status_command.cpp',
    'stop_command.cpp',
    'supervise_command.cpp',
)
