tt_test_src += files(
    'bundle_options_builder.cpp',
    'dummy_builder.cpp',
    'environment_builder.cpp',
    'logger_script_builder.cpp',
    'long_lived_script_builder.cpp',
    'longrun_options_builder.cpp',
    'main_script_builder.cpp',
    'main_section_builder.cpp',
    'oneshot_options_builder.cpp',
    'script_builder.cpp',
    'utils.cpp',
)
